2005-03-16 Stuart Brorson <sdb@cloud9.net>

        * scheme/gnet-spice-sdb.scm: fix typo in CCCS.  Now usage of 
	Vsense is harmonized.

2005-03-13 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Removed all tests for gtk+ 1.2.x and fixed error 
        message if gtk+ 2.2.x is not found.

2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20050313

2005-03-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Fixed code to allow user to specify absolute 
	filenames on the command line again.

	* tests/*: Updated more golden regression files to take into
	account the package reordering changes.

2005-02-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/*, examples/switcap/example.scn: Updated regression golden
	files to take into account the package reordering that has
	occurred because the various guile/gnetlist routines were either
	replaced or rewritten.	No netlist errors detected, just some
	of the packages were showing up in a different order in the various
	netlist formats.

2005-02-22  Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac, src/gnetlist.c: Removed call to gtk_init().
	  GDK is now initialized in libgeda if it's a non-graphical app.

2005-02-21 03:09  Dan McMahill <danmc>

	* src/gnetlist.c: fix some format string/type mismatch bugs

2005-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-spice.scm: Removed string by request from the original
	author.

2005-02-20  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gnetlist.c (main_prog): Adapted for new logging system.

2005-02-19  Carlos Nieves Onega <cnieves@iespana.es>

	* src/globals.c: Added definition of picture_draw_func after 
	adding picture support to libgeda.
	
	* configure.ac, src/gnetlist.c: Added call to gtk_init() 
	  since gdk-pixbuf needs it if called.	  

2005-02-16 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-bom.scm, scheme/gnet-bom2.scm, scheme/gnet-redac.scm: